date tradeAsking smaller to hopefully completely stop wrapping in Available Trades tab

--- a/styles.css
+++ b/styles.css
@@ -1787,7 +1787,7 @@ div.archaeologyGlyphContainer div.archaeologyGlyphHeader {
 	width:185px;
 }
 .tradeInfo .tradeAsking {
-	width:60px;
+	width:55px;
 }
 .tradeInfo .tradeAsking img {
 	vertical-align:top;
